--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@faker-js/faker": "^7.5.0",
+    "miragejs": "^0.1.45"
   },
   "private": true
 }
